[gd_scene load_steps=2 format=3 uid="uid://heroicon"]

[ext_resource type="Script" uid="uid://dr2vfhrne35cn" path="res://scripts/ui/HeroIcon.gd" id="1"]

[node name="HeroIcon" type="TextureButton"]
script = ExtResource("1")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 0
expand_mode = 1
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_right = 89.0
offset_bottom = 50.0

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Hero Name"

[node name="LevelLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Level: 1"
